--- a/GroupProject-Layout.ipynb
+++ b/GroupProject-Layout.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "id": "2cc0a442",
    "metadata": {},
    "outputs": [],
@@ -73,24 +73,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "id": "5e30cb3f",
    "metadata": {},
    "outputs": [],
    "source": [
     "#file_path = 'Greenhouse_gas_emissions.csv'\n",
-    "file_path = 'NOx_data.csv'\n",
+    "#file_path = 'NOx_data.csv'\n",
     "#file_path = '2.5.csv'\n",
-    "#file_path = '10.csv'\n",
+    "file_path = '10.csv'\n",
+    "\n",
     "\n",
     "df = pd.read_csv(file_path, sep = ';',encoding='ISO-8859-1') \n",
+    "\n",
     "# The file had an incorrect delimiter which caused a ParserError,\n",
     "# this is solved by adding sep=';' when reading the file. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "id": "bf8fabfe",
    "metadata": {},
    "outputs": [
@@ -115,7 +117,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>TIME</th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>2019</th>\n",
        "      <th>2020</th>\n",
        "    </tr>\n",
@@ -124,236 +126,334 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Belgium</td>\n",
-       "      <td>158,542</td>\n",
-       "      <td>139,238</td>\n",
+       "      <td>27,438</td>\n",
+       "      <td>25,513</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Bulgaria</td>\n",
-       "      <td>91,587</td>\n",
-       "      <td>86,581</td>\n",
+       "      <td>44,091</td>\n",
+       "      <td>44,525</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Czechia</td>\n",
-       "      <td>173,719</td>\n",
-       "      <td>156,396</td>\n",
+       "      <td>40,567</td>\n",
+       "      <td>37,402</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Denmark</td>\n",
-       "      <td>96,648</td>\n",
-       "      <td>89,391</td>\n",
+       "      <td>23,350</td>\n",
+       "      <td>22,412</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Germany</td>\n",
-       "      <td>1,107,200</td>\n",
-       "      <td>975,646</td>\n",
+       "      <td>195,887</td>\n",
+       "      <td>182,126</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Estonia</td>\n",
-       "      <td>25,496</td>\n",
-       "      <td>23,238</td>\n",
+       "      <td>11,780</td>\n",
+       "      <td>12,664</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Ireland</td>\n",
-       "      <td>104,218</td>\n",
-       "      <td>96,299</td>\n",
+       "      <td>30,461</td>\n",
+       "      <td>30,287</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Greece</td>\n",
-       "      <td>249,825</td>\n",
-       "      <td>222,012</td>\n",
+       "      <td>58,434</td>\n",
+       "      <td>56,342</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Spain</td>\n",
-       "      <td>679,237</td>\n",
-       "      <td>599,356</td>\n",
+       "      <td>211,498</td>\n",
+       "      <td>211,698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>France</td>\n",
-       "      <td>849,189</td>\n",
-       "      <td>736,594</td>\n",
+       "      <td>277,876</td>\n",
+       "      <td>247,518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Croatia</td>\n",
-       "      <td>48,527</td>\n",
-       "      <td>45,809</td>\n",
+       "      <td>34,723</td>\n",
+       "      <td>51,409</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Italy</td>\n",
-       "      <td>661,666</td>\n",
-       "      <td>596,349</td>\n",
+       "      <td>214,519</td>\n",
+       "      <td>219,537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>Cyprus</td>\n",
-       "      <td>14,336</td>\n",
-       "      <td>11,592</td>\n",
+       "      <td>1,958</td>\n",
+       "      <td>1,765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Latvia</td>\n",
-       "      <td>35,469</td>\n",
-       "      <td>32,862</td>\n",
+       "      <td>27,999</td>\n",
+       "      <td>26,298</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Lithuania</td>\n",
-       "      <td>54,882</td>\n",
-       "      <td>52,674</td>\n",
+       "      <td>26,538</td>\n",
+       "      <td>27,554</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>Luxembourg</td>\n",
-       "      <td>19,269</td>\n",
-       "      <td>15,199</td>\n",
+       "      <td>1,845</td>\n",
+       "      <td>1,672</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>Hungary</td>\n",
-       "      <td>115,422</td>\n",
-       "      <td>107,744</td>\n",
+       "      <td>57,641</td>\n",
+       "      <td>53,542</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>Malta</td>\n",
-       "      <td>4,660</td>\n",
-       "      <td>4,148</td>\n",
+       "      <td>1,465</td>\n",
+       "      <td>1,641</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>Netherlands</td>\n",
-       "      <td>238,479</td>\n",
-       "      <td>215,630</td>\n",
+       "      <td>29,507</td>\n",
+       "      <td>27,652</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>Austria</td>\n",
-       "      <td>145,775</td>\n",
-       "      <td>124,467</td>\n",
+       "      <td>27,788</td>\n",
+       "      <td>26,788</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>Poland</td>\n",
-       "      <td>641,420</td>\n",
-       "      <td>605,380</td>\n",
+       "      <td>420,726</td>\n",
+       "      <td>395,660</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>Portugal</td>\n",
-       "      <td>155,064</td>\n",
-       "      <td>135,262</td>\n",
+       "      <td>58,435</td>\n",
+       "      <td>56,956</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>Romania</td>\n",
-       "      <td>218,293</td>\n",
-       "      <td>205,009</td>\n",
+       "      <td>150,993</td>\n",
+       "      <td>149,066</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>Slovenia</td>\n",
-       "      <td>29,575</td>\n",
-       "      <td>25,529</td>\n",
+       "      <td>13,300</td>\n",
+       "      <td>13,044</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>Slovakia</td>\n",
-       "      <td>58,818</td>\n",
-       "      <td>56,003</td>\n",
+       "      <td>24,098</td>\n",
+       "      <td>24,024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>Finland</td>\n",
-       "      <td>120,244</td>\n",
-       "      <td>105,614</td>\n",
+       "      <td>29,618</td>\n",
+       "      <td>26,569</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>Sweden</td>\n",
-       "      <td>125,419</td>\n",
-       "      <td>116,695</td>\n",
+       "      <td>36,755</td>\n",
+       "      <td>35,267</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>Iceland</td>\n",
-       "      <td>19,568</td>\n",
-       "      <td>17,936</td>\n",
+       "      <td>2,254</td>\n",
+       "      <td>2,034</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>Liechtenstein</td>\n",
-       "      <td>261</td>\n",
-       "      <td>238</td>\n",
+       "      <td>35</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>Norway</td>\n",
-       "      <td>155,463</td>\n",
-       "      <td>146,058</td>\n",
+       "      <td>33,585</td>\n",
+       "      <td>34,127</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
        "      <td>Switzerland</td>\n",
-       "      <td>60,830</td>\n",
-       "      <td>52,633</td>\n",
+       "      <td>14,197</td>\n",
+       "      <td>13,592</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>Türkiye</td>\n",
-       "      <td>974,217</td>\n",
-       "      <td>957,073</td>\n",
+       "      <td>290,163</td>\n",
+       "      <td>315,565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             TIME       2019     2020\n",
-       "0         Belgium    158,542  139,238\n",
-       "1        Bulgaria     91,587   86,581\n",
-       "2         Czechia    173,719  156,396\n",
-       "3         Denmark     96,648   89,391\n",
-       "4         Germany  1,107,200  975,646\n",
-       "5         Estonia     25,496   23,238\n",
-       "6         Ireland    104,218   96,299\n",
-       "7          Greece    249,825  222,012\n",
-       "8           Spain    679,237  599,356\n",
-       "9          France    849,189  736,594\n",
-       "10        Croatia     48,527   45,809\n",
-       "11          Italy    661,666  596,349\n",
-       "12         Cyprus     14,336   11,592\n",
-       "13         Latvia     35,469   32,862\n",
-       "14      Lithuania     54,882   52,674\n",
-       "15     Luxembourg     19,269   15,199\n",
-       "16        Hungary    115,422  107,744\n",
-       "17          Malta      4,660    4,148\n",
-       "18    Netherlands    238,479  215,630\n",
-       "19        Austria    145,775  124,467\n",
-       "20         Poland    641,420  605,380\n",
-       "21       Portugal    155,064  135,262\n",
-       "22        Romania    218,293  205,009\n",
-       "23       Slovenia     29,575   25,529\n",
-       "24       Slovakia     58,818   56,003\n",
-       "25        Finland    120,244  105,614\n",
-       "26         Sweden    125,419  116,695\n",
-       "27        Iceland     19,568   17,936\n",
-       "28  Liechtenstein        261      238\n",
-       "29         Norway    155,463  146,058\n",
-       "30    Switzerland     60,830   52,633\n",
-       "31        Türkiye    974,217  957,073"
+       "       Unnamed: 0     2019     2020\n",
+       "0         Belgium   27,438   25,513\n",
+       "1        Bulgaria   44,091   44,525\n",
+       "2         Czechia   40,567   37,402\n",
+       "3         Denmark   23,350   22,412\n",
+       "4         Germany  195,887  182,126\n",
+       "5         Estonia   11,780   12,664\n",
+       "6         Ireland   30,461   30,287\n",
+       "7          Greece   58,434   56,342\n",
+       "8           Spain  211,498  211,698\n",
+       "9          France  277,876  247,518\n",
+       "10        Croatia   34,723   51,409\n",
+       "11          Italy  214,519  219,537\n",
+       "12         Cyprus    1,958    1,765\n",
+       "13         Latvia   27,999   26,298\n",
+       "14      Lithuania   26,538   27,554\n",
+       "15     Luxembourg    1,845    1,672\n",
+       "16        Hungary   57,641   53,542\n",
+       "17          Malta    1,465    1,641\n",
+       "18    Netherlands   29,507   27,652\n",
+       "19        Austria   27,788   26,788\n",
+       "20         Poland  420,726  395,660\n",
+       "21       Portugal   58,435   56,956\n",
+       "22        Romania  150,993  149,066\n",
+       "23       Slovenia   13,300   13,044\n",
+       "24       Slovakia   24,098   24,024\n",
+       "25        Finland   29,618   26,569\n",
+       "26         Sweden   36,755   35,267\n",
+       "27        Iceland    2,254    2,034\n",
+       "28  Liechtenstein       35       32\n",
+       "29         Norway   33,585   34,127\n",
+       "30    Switzerland   14,197   13,592\n",
+       "31        Türkiye  290,163  315,565\n",
+       "32            NaN      NaN      NaN\n",
+       "33            NaN      NaN      NaN\n",
+       "34            NaN      NaN      NaN\n",
+       "35            NaN      NaN      NaN\n",
+       "36            NaN      NaN      NaN\n",
+       "37            NaN      NaN      NaN\n",
+       "38            NaN      NaN      NaN\n",
+       "39            NaN      NaN      NaN\n",
+       "40            NaN      NaN      NaN\n",
+       "41            NaN      NaN      NaN\n",
+       "42            NaN      NaN      NaN\n",
+       "43            NaN      NaN      NaN\n",
+       "44            NaN      NaN      NaN\n",
+       "45            NaN      NaN      NaN"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "id": "12447d88",
    "metadata": {},
    "outputs": [],
