--- a/GroupProject-Layout.ipynb
+++ b/GroupProject-Layout.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 32,
    "id": "2cc0a442",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 33,
    "id": "5e30cb3f",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 34,
    "id": "bf8fabfe",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
+       "      <th>PM10</th>\n",
        "      <th>2019</th>\n",
        "      <th>2020</th>\n",
        "    </tr>\n",
@@ -311,7 +311,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
-       "      <td>Türkiye</td>\n",
+       "      <td>TÃ¼rkiye</td>\n",
        "      <td>290,163</td>\n",
        "      <td>315,565</td>\n",
        "    </tr>\n",
@@ -404,7 +404,7 @@
        "</div>"
       ],
       "text/plain": [
-       "       Unnamed: 0     2019     2020\n",
+       "             PM10     2019     2020\n",
        "0         Belgium   27,438   25,513\n",
        "1        Bulgaria   44,091   44,525\n",
        "2         Czechia   40,567   37,402\n",
@@ -436,7 +436,7 @@
        "28  Liechtenstein       35       32\n",
        "29         Norway   33,585   34,127\n",
        "30    Switzerland   14,197   13,592\n",
-       "31        Türkiye  290,163  315,565\n",
+       "31       TÃ¼rkiye  290,163  315,565\n",
        "32            NaN      NaN      NaN\n",
        "33            NaN      NaN      NaN\n",
        "34            NaN      NaN      NaN\n",
@@ -453,7 +453,7 @@
        "45            NaN      NaN      NaN"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 35,
    "id": "12447d88",
    "metadata": {},
    "outputs": [],
