Renamed the Greenhousegas csv file

--- a/GroupProject-Layout.ipynb
+++ b/GroupProject-Layout.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 89,
    "id": "2cc0a442",
    "metadata": {},
    "outputs": [],
@@ -73,18 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 90,
    "id": "5e30cb3f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = 'Greenhouse_gas_emissions.csv'\n",
-    "#file_path = 'NOx_data.csv'\n",
-    "#file_path = '2.5.csv'\n",
-    "#file_path = '10.csv'\n",
+    "file_path1 = 'GHG.csv'\n",
+    "file_path2 = 'NOx_data.csv'\n",
+    "file_path3 = '2.5.csv'\n",
+    "file_path4 = '10.csv'\n",
     "\n",
     "\n",
-    "df = pd.read_csv(file_path, sep = ';',encoding='ISO-8859-1') \n",
+    "df_GHG = pd.read_csv(file_path1, sep = ';',encoding='ISO-8859-1') \n",
     "# The file had an incorrect delimiter which caused a ParserError,\n",
     "# this is solved by adding sep=';' when reading the file. \n",
     "# This file also gave some UnicodeDecodeErorr, this is solved \n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 91,
    "id": "bf8fabfe",
    "metadata": {},
    "outputs": [
@@ -374,13 +374,13 @@
        "29       Switzerland   -1,766.42         NaN   -1,426.68"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df_GHG"
    ]
   },
   {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 92,
    "id": "12447d88",
    "metadata": {},
    "outputs": [],
