imported all the emission csv files

--- a/GroupProject-Layout.ipynb
+++ b/GroupProject-Layout.ipynb
@@ -34,15 +34,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 89,
-=======
-<<<<<<< HEAD
-   "execution_count": 32,
-=======
-   "execution_count": 81,
->>>>>>> 0dd75b155e6af8391a99b3107eb3dcb76a73dfe2
->>>>>>> 608035663a1d1897b1b09e3ba6a2d423339da82e
+   "execution_count": 120,
    "id": "2cc0a442",
    "metadata": {},
    "outputs": [],
@@ -81,15 +73,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 90,
-=======
-<<<<<<< HEAD
-   "execution_count": 33,
-=======
-   "execution_count": 82,
->>>>>>> 0dd75b155e6af8391a99b3107eb3dcb76a73dfe2
->>>>>>> 608035663a1d1897b1b09e3ba6a2d423339da82e
+   "execution_count": 121,
    "id": "5e30cb3f",
    "metadata": {},
    "outputs": [],
@@ -100,7 +84,11 @@
     "file_path4 = '10.csv'\n",
     "\n",
     "\n",
-    "df_GHG = pd.read_csv(file_path1, sep = ';',encoding='ISO-8859-1') \n",
+    "df_GHG = pd.read_csv(file_path1, sep = ';',encoding='ISO-8859-1')\n",
+    "df_NOx = pd.read_csv(file_path2, sep = ';',encoding='ISO-8859-1')\n",
+    "df_twofive = pd.read_csv(file_path3, sep = ';',encoding='ISO-8859-1')\n",
+    "df_ten = pd.read_csv(file_path4, sep = ';',encoding='ISO-8859-1')\n",
+    "\n",
     "# The file had an incorrect delimiter which caused a ParserError,\n",
     "# this is solved by adding sep=';' when reading the file. \n",
     "# This file also gave some UnicodeDecodeErorr, this is solved \n",
@@ -110,458 +98,11 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 91,
-=======
-<<<<<<< HEAD
-   "execution_count": 34,
-=======
-   "execution_count": 83,
->>>>>>> 0dd75b155e6af8391a99b3107eb3dcb76a73dfe2
->>>>>>> 608035663a1d1897b1b09e3ba6a2d423339da82e
+   "execution_count": null,
    "id": "bf8fabfe",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-<<<<<<< HEAD
-       "      <th>PM10</th>\n",
-       "      <th>2019</th>\n",
-=======
-       "      <th>Greenhouse gasses</th>\n",
->>>>>>> 0dd75b155e6af8391a99b3107eb3dcb76a73dfe2
-       "      <th>2020</th>\n",
-       "      <th>Unnamed: 2</th>\n",
-       "      <th>2019</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Belgium</td>\n",
-       "      <td>-480.47</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-334.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bulgaria</td>\n",
-       "      <td>-9,365.55</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-9,405.54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Czechia</td>\n",
-       "      <td>7,778.07</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11,267.85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Denmark</td>\n",
-       "      <td>2,953.37</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3,101.71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>-6,822.26</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4,196.84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Estonia</td>\n",
-       "      <td>1,149.49</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2,509.07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Ireland</td>\n",
-       "      <td>6,657.07</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7,042.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Greece</td>\n",
-       "      <td>-5,400.73</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-5,416.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Spain</td>\n",
-       "      <td>-45,229.39</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-44,094.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>France</td>\n",
-       "      <td>-18,226.97</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-21,621.85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Croatia</td>\n",
-       "      <td>-5,735.84</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-5,666.79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Italy</td>\n",
-       "      <td>-41,837.02</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-32,544.72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Cyprus</td>\n",
-       "      <td>-297.04</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-298.54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Latvia</td>\n",
-       "      <td>-2,292.90</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>801.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Lithuania</td>\n",
-       "      <td>-5,882.69</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-6,636.06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Luxembourg</td>\n",
-       "      <td>-363.59</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-447.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Hungary</td>\n",
-       "      <td>-5,388.05</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-7,109.55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Malta</td>\n",
-       "      <td>5.72</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8.28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Netherlands</td>\n",
-       "      <td>4,175.89</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4,142.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>2,132.47</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-5,222.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Poland</td>\n",
-       "      <td>-18,294.50</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-18,957.85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Portugal</td>\n",
-       "      <td>-4,498.54</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-4,707.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Romania</td>\n",
-       "      <td>-48,222.60</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-50,406.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Slovenia</td>\n",
-       "      <td>-3,344.82</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-3,142.73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Slovakia</td>\n",
-       "      <td>-5,514.80</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-7,695.33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Finland</td>\n",
-       "      <td>-6,716.30</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-9,112.97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Sweden</td>\n",
-       "      <td>-38,255.64</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-41,286.62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Iceland</td>\n",
-       "      <td>9,410.69</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9,421.15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Norway</td>\n",
-       "      <td>-15,288.86</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-19,172.68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Switzerland</td>\n",
-<<<<<<< HEAD
-       "      <td>14,197</td>\n",
-       "      <td>13,592</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>TÃ¼rkiye</td>\n",
-       "      <td>290,163</td>\n",
-       "      <td>315,565</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-=======
-       "      <td>-1,766.42</td>\n",
->>>>>>> 0dd75b155e6af8391a99b3107eb3dcb76a73dfe2
-       "      <td>NaN</td>\n",
-       "      <td>-1,426.68</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-<<<<<<< HEAD
-       "             PM10     2019     2020\n",
-       "0         Belgium   27,438   25,513\n",
-       "1        Bulgaria   44,091   44,525\n",
-       "2         Czechia   40,567   37,402\n",
-       "3         Denmark   23,350   22,412\n",
-       "4         Germany  195,887  182,126\n",
-       "5         Estonia   11,780   12,664\n",
-       "6         Ireland   30,461   30,287\n",
-       "7          Greece   58,434   56,342\n",
-       "8           Spain  211,498  211,698\n",
-       "9          France  277,876  247,518\n",
-       "10        Croatia   34,723   51,409\n",
-       "11          Italy  214,519  219,537\n",
-       "12         Cyprus    1,958    1,765\n",
-       "13         Latvia   27,999   26,298\n",
-       "14      Lithuania   26,538   27,554\n",
-       "15     Luxembourg    1,845    1,672\n",
-       "16        Hungary   57,641   53,542\n",
-       "17          Malta    1,465    1,641\n",
-       "18    Netherlands   29,507   27,652\n",
-       "19        Austria   27,788   26,788\n",
-       "20         Poland  420,726  395,660\n",
-       "21       Portugal   58,435   56,956\n",
-       "22        Romania  150,993  149,066\n",
-       "23       Slovenia   13,300   13,044\n",
-       "24       Slovakia   24,098   24,024\n",
-       "25        Finland   29,618   26,569\n",
-       "26         Sweden   36,755   35,267\n",
-       "27        Iceland    2,254    2,034\n",
-       "28  Liechtenstein       35       32\n",
-       "29         Norway   33,585   34,127\n",
-       "30    Switzerland   14,197   13,592\n",
-       "31       TÃ¼rkiye  290,163  315,565\n",
-       "32            NaN      NaN      NaN\n",
-       "33            NaN      NaN      NaN\n",
-       "34            NaN      NaN      NaN\n",
-       "35            NaN      NaN      NaN\n",
-       "36            NaN      NaN      NaN\n",
-       "37            NaN      NaN      NaN\n",
-       "38            NaN      NaN      NaN\n",
-       "39            NaN      NaN      NaN\n",
-       "40            NaN      NaN      NaN\n",
-       "41            NaN      NaN      NaN\n",
-       "42            NaN      NaN      NaN\n",
-       "43            NaN      NaN      NaN\n",
-       "44            NaN      NaN      NaN\n",
-       "45            NaN      NaN      NaN"
-      ]
-     },
-     "execution_count": 34,
-=======
-       "   Greenhouse gasses        2020  Unnamed: 2        2019\n",
-       "0            Belgium     -480.47         NaN      -334.9\n",
-       "1           Bulgaria   -9,365.55         NaN   -9,405.54\n",
-       "2            Czechia    7,778.07         NaN   11,267.85\n",
-       "3            Denmark    2,953.37         NaN    3,101.71\n",
-       "4            Germany   -6,822.26         NaN    4,196.84\n",
-       "5            Estonia    1,149.49         NaN    2,509.07\n",
-       "6            Ireland    6,657.07         NaN    7,042.45\n",
-       "7             Greece   -5,400.73         NaN   -5,416.18\n",
-       "8              Spain  -45,229.39         NaN  -44,094.76\n",
-       "9             France  -18,226.97         NaN  -21,621.85\n",
-       "10           Croatia   -5,735.84         NaN   -5,666.79\n",
-       "11             Italy  -41,837.02         NaN  -32,544.72\n",
-       "12            Cyprus     -297.04         NaN     -298.54\n",
-       "13            Latvia   -2,292.90         NaN      801.49\n",
-       "14         Lithuania   -5,882.69         NaN   -6,636.06\n",
-       "15        Luxembourg     -363.59         NaN     -447.65\n",
-       "16           Hungary   -5,388.05         NaN   -7,109.55\n",
-       "17             Malta        5.72         NaN        8.28\n",
-       "18       Netherlands    4,175.89         NaN    4,142.38\n",
-       "19           Austria    2,132.47         NaN   -5,222.20\n",
-       "20            Poland  -18,294.50         NaN  -18,957.85\n",
-       "21          Portugal   -4,498.54         NaN   -4,707.12\n",
-       "22           Romania  -48,222.60         NaN  -50,406.76\n",
-       "23          Slovenia   -3,344.82         NaN   -3,142.73\n",
-       "24          Slovakia   -5,514.80         NaN   -7,695.33\n",
-       "25           Finland   -6,716.30         NaN   -9,112.97\n",
-       "26            Sweden  -38,255.64         NaN  -41,286.62\n",
-       "27           Iceland    9,410.69         NaN    9,421.15\n",
-       "28            Norway  -15,288.86         NaN  -19,172.68\n",
-       "29       Switzerland   -1,766.42         NaN   -1,426.68"
-      ]
-     },
-<<<<<<< HEAD
-     "execution_count": 91,
-=======
-     "execution_count": 83,
->>>>>>> 0dd75b155e6af8391a99b3107eb3dcb76a73dfe2
->>>>>>> 608035663a1d1897b1b09e3ba6a2d423339da82e
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_GHG"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -570,33 +111,6 @@
    "source": [
     " "
    ]
-  },
-  {
-   "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 92,
-=======
-<<<<<<< HEAD
-   "execution_count": 35,
-=======
-   "execution_count": 84,
->>>>>>> 0dd75b155e6af8391a99b3107eb3dcb76a73dfe2
->>>>>>> 608035663a1d1897b1b09e3ba6a2d423339da82e
-   "id": "12447d88",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Maybe we should merge the data so that we have one row per country (instead of now per city within a country)\n",
-    "# We need to filter the data, get rid of columns that we will not look at."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "974360b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
